# foveated_kv

./: .gitignore  CLAUDE.md  LICENSE  README.md  foveated_attn.metallib  pyproject.toml  setup.py
.claude/projects/-Users-haybales-projects-accelerate/memory/: MEMORY.md  feedback_benchmarks_serial.md  feedback_uv_env.md  feedback_uv_install.md  feedback_uv_no_pip.md  project_cuda_bug.md
benchmarks/: __init__.py  benchmark_crossover.py  benchmark_longbench.py  benchmark_mlx.py  benchmark_mlx_ablation.py  benchmark_mlx_longbench.py  benchmark_mlx_model.py  benchmark_mlx_needle_heatmap.py  benchmark_mlx_sustained.py  benchmark_mlx_throughput.py  benchmark_promotion_quality.py  benchmark_promotion_recovery.py  profile_bottleneck.py  profile_decode_step.py
csrc/: CMakeLists.txt  bindings.cpp  foveated_attn.cpp  foveated_attn.h  foveated_compress.cpp  foveated_compress.h  foveated_primitive.cpp  foveated_primitive.h  promotion_pipeline.cpp  promotion_pipeline.h
csrc/kernels/: foveated_attn.metal  foveated_compress.metal
docs/: async_tier_manager.md  benchmark_ground_truth.md  benchmark_plan.md  build_plan.md  cleanup_plan.md  foveated_strategy.md  phase1_plan.md  roadmap_mlx_native.md
paper/: foveated_kv.tex
paper/scripts/: effective_promotion_rate.py  key_precision_ablation.py  llama_verification.py  perplexity.py  spike_analysis.py  tier_ratio_ablation.py
scripts/: generate_charts.py  run_mlx_benchmarks.sh
src/foveated_kv/: __init__.py  cli.py  disk_archive.py  metal_foveated.py  mlx_foveated.py  mlx_generate.py  turbo_constants.py  turbo_quantize.py
src/mipmap_kv/: __init__.py  metal_foveated.py  mlx_async_promoter.py  mlx_foveated.py  mlx_generate.py  mlx_quantize.py
tests/: test_disk_archive.py  test_longbench_scoring.py  test_mlx_foveated.py  test_turbo_quantize.py
tests/fixtures/: foveal_only.pt  gqa_mixed.pt  long_context.pt  mixed_small.pt  qwen7b_shape.pt  spike_case.pt
