[project]
name = "mipmap-kv-cache"
version = "0.2.0"
description = "FoveatedKV: Importance-adaptive mixed-precision KV cache for LLMs on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.18",
    "mlx-lm>=0.20",
    "numpy",
    "rouge",
    "fuzzywuzzy",
    "python-Levenshtein",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: requires model download (deselect with '-m not slow')"]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.hatch.build.targets.wheel]
packages = ["src/mipmap_kv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
